==> cherry-embedded/CherryUSB/port/nuvoton/usb_dc_usbfs.c <==
#include <stdint.h>
#include "NuMicro.h"
#include "usbd_core.h"
#define USBD_EPNUM 8
#define USB_NUM_BIDIR_ENDPOINTS (USBD_EPNUM >> 1)
#define USBD_EP_GET_CONFIG(ep) (*((__IO uint32_t *)((uint32_t)&USBD->EP[0].CFG + (uint32_t)((ep) << 4))))
#define DEFAULT_EP_MAX_PKT_SIZE 64
#define EP0_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP1_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP2_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP3_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP4_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP5_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP6_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP7_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP8_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP9_MAX_PKT_SIZE  DEFAULT_EP_MAX_PKT_SIZE
#define EP10_MAX_PKT_SIZE DEFAULT_EP_MAX_PKT_SIZE
#define EP11_MAX_PKT_SIZE DEFAULT_EP_MAX_PKT_SIZE
#define SETUP_BUF_BASE 0
#define SETUP_BUF_LEN  8
#define EP0_BUF_BASE   (SETUP_BUF_BASE + SETUP_BUF_LEN)
#define EP0_BUF_LEN    EP0_MAX_PKT_SIZE
#define EP1_BUF_BASE   (SETUP_BUF_BASE + SETUP_BUF_LEN)
#define EP1_BUF_LEN    EP1_MAX_PKT_SIZE
#define EP2_BUF_BASE   (EP1_BUF_BASE + EP1_BUF_LEN)
#define EP2_BUF_LEN    EP2_MAX_PKT_SIZE
#define EP3_BUF_BASE   (EP2_BUF_BASE + EP2_BUF_LEN)
#define EP3_BUF_LEN    EP3_MAX_PKT_SIZE
#define EP4_BUF_BASE   (EP3_BUF_BASE + EP3_BUF_LEN)
#define EP4_BUF_LEN    EP4_MAX_PKT_SIZE
#define EP5_BUF_BASE   (EP4_BUF_BASE + EP4_BUF_LEN)
#define EP5_BUF_LEN    EP5_MAX_PKT_SIZE

int usb_dc_init(uint8_t busid)
{
    memset(&g_nuvoton_udc, 0, sizeof(g_nuvoton_udc));

    usb_dc_low_level_init();

    /*****************************************************/
    /* Initial USB engine */
    USBD->ATTR = 0x6D0ul;
    /* Force SE0 */
    USBD_SET_SE0();

    /*****************************************************/
    /* Init setup packet buffer */
    /* Buffer for setup packet -> [0 ~ 0x7] */
    USBD->STBUFSEG = SETUP_BUF_BASE;

    USBD_SET_EP_BUF_ADDR(EP0, EP0_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP1, EP1_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP2, EP2_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP3, EP3_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP4, EP4_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP5, EP5_BUF_BASE);
#if USBD_EPNUM >= 8
    USBD_SET_EP_BUF_ADDR(EP6, EP6_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP7, EP7_BUF_BASE);
#if USBD_EPNUM >= 10
    USBD_SET_EP_BUF_ADDR(EP8, EP8_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP9, EP9_BUF_BASE);
    USBD_SET_EP_BUF_ADDR(EP10, EP10_BUF_BASE);
#if USBD_EPNUM >= 12
    USBD_SET_EP_BUF_ADDR(EP11, EP11_BUF_BASE);
#endif
#endif
#endif

    /*****************************************************/
    /* USB start */
    /* Disable software-disconnect function */
    USBD_CLR_SE0();
    USBD->ATTR = 0x7D0ul;

    /* Clear USB-related interrupts before enable interrupt */
    USBD_CLR_INT_FLAG(USBD_INT_BUS | USBD_INT_USB | USBD_INT_FLDET | USBD_INT_WAKEUP);

    /* Enable USB-related interrupts. */
    USBD_ENABLE_INT(USBD_INT_BUS | USBD_INT_USB | USBD_INT_FLDET | USBD_INT_WAKEUP);
    /*****************************************************/

    return 0;
}

int usbd_set_address(uint8_t busid, const uint8_t addr)
{
    uint8_t usbd_addr = USBD_GET_ADDR();
    if ((usbd_addr == 0) && (usbd_addr != addr)) {
        g_nuvoton_udc.dev_addr = addr;
        usbd_set_address_flag = 1;
    }

    return 0;
}

int usbd_ep_open(uint8_t busid, const struct usb_endpoint_descriptor *ep)
{
    uint8_t ep_idx = USB_EP_GET_IDX(ep->bEndpointAddress);

    if (USB_EP_DIR_IS_IN(ep->bEndpointAddress)) {
        uint8_t epnum = USBD_EPNUM_FROM_IN_EPIDX(ep_idx);

        g_nuvoton_udc.in_ep[ep_idx].ep_mps = USB_GET_MAXPACKETSIZE(ep->wMaxPacketSize);
        g_nuvoton_udc.in_ep[ep_idx].ep_type = USB_GET_ENDPOINT_TYPE(ep->bmAttributes);
        g_nuvoton_udc.in_ep[ep_idx].ep_enable = true;
        if (ep_idx == 0) {
            /* EP0 ==> control IN endpoint, address 0 */
            USBD_CONFIG_EP(EP0, USBD_CFG_CSTALL | USBD_CFG_EPMODE_IN | 0);
        } else {
            USBD_CONFIG_EP(epnum, USBD_CFG_EPMODE_IN | ep_idx);
            USBD_STOP_TRANSACTION(epnum);
        }
    } else {
        uint8_t epnum = USBD_EPNUM_FROM_OUT_EPIDX(ep_idx);

        g_nuvoton_udc.out_ep[ep_idx].ep_mps = USB_GET_MAXPACKETSIZE(ep->wMaxPacketSize);
        g_nuvoton_udc.out_ep[ep_idx].ep_type = USB_GET_ENDPOINT_TYPE(ep->bmAttributes);
        g_nuvoton_udc.out_ep[ep_idx].ep_enable = true;
        if (ep_idx == 0) {
            /* EP1 ==> control OUT endpoint, address 0 */
            USBD_CONFIG_EP(EP1, USBD_CFG_CSTALL | USBD_CFG_EPMODE_OUT | 0);
        } else {
            USBD_CONFIG_EP(epnum, USBD_CFG_EPMODE_OUT | ep_idx);
            USBD_STOP_TRANSACTION(epnum);
        }
    }

    return 0;
}

int usbd_ep_close(uint8_t busid, const uint8_t ep)
{
    USBD->EP[USBD_EPNUM_FROM_EPADDR(ep)].CFG &= ~USBD_CFG_STATE_Msk; // disable endpoint
    return 0;
}

int usbd_ep_set_stall(uint8_t busid, const uint8_t ep)
{
    USBD_SET_EP_STALL(USBD_EPNUM_FROM_EPADDR(ep));
    return 0;
}

int usbd_ep_clear_stall(uint8_t busid, const uint8_t ep)
{
    USBD_CLR_EP_STALL(USBD_EPNUM_FROM_EPADDR(ep));
    return 0;
}

int usbd_ep_start_write(uint8_t busid, const uint8_t ep, const uint8_t *data, uint32_t data_len)
{
    uint8_t ep_idx = USB_EP_GET_IDX(ep);

    if (!data && data_len) {
        return -1;
    }
    if (!g_nuvoton_udc.in_ep[ep_idx].ep_enable) {
        return -2;
    }

    uint8_t epnum = USBD_EPNUM_FROM_IN_EPIDX(ep);

    g_nuvoton_udc.in_ep[ep_idx].xfer_buf = (uint8_t *)data;
    g_nuvoton_udc.in_ep[ep_idx].xfer_len = data_len;
    g_nuvoton_udc.in_ep[ep_idx].actual_xfer_len = 0;

    if (data_len > g_nuvoton_udc.in_ep[ep_idx].ep_mps) {
        data_len = g_nuvoton_udc.in_ep[ep_idx].ep_mps;
    }

    if (epnum == 0) {
        USBD_SET_DATA1(epnum);
    }

    USBD_MemCopy((uint8_t *)(USBD_BUF_BASE + USBD_GET_EP_BUF_ADDR(epnum)), (uint8_t *)data, data_len);
    USBD_SET_PAYLOAD_LEN(epnum, data_len);

    return 0;
}

int usbd_ep_start_read(uint8_t busid, const uint8_t ep, uint8_t *data, uint32_t data_len)
{
    uint8_t ep_idx = USB_EP_GET_IDX(ep);

    if (!data && data_len) {
        return -1;
    }
    if (!g_nuvoton_udc.out_ep[ep_idx].ep_enable) {
        return -2;
    }

    uint8_t epnum = USBD_EPNUM_FROM_OUT_EPIDX(ep);

    g_nuvoton_udc.out_ep[ep_idx].xfer_buf = (uint8_t *)data;
    g_nuvoton_udc.out_ep[ep_idx].xfer_len = data_len;
    g_nuvoton_udc.out_ep[ep_idx].actual_xfer_len = 0;

    if (g_nuvoton_udc.out_ep[ep_idx].xfer_len < g_nuvoton_udc.out_ep[ep_idx].ep_mps) {
        g_nuvoton_udc.out_ep[ep_idx].mps_xfer_len = g_nuvoton_udc.out_ep[ep_idx].xfer_len;
    } else {
        g_nuvoton_udc.out_ep[ep_idx].mps_xfer_len = g_nuvoton_udc.out_ep[ep_idx].ep_mps;
    }

    USBD_SET_PAYLOAD_LEN(epnum, g_nuvoton_udc.out_ep[ep_idx].mps_xfer_len);

    return 0;
}
