==> cherry-embedded/CherryUSB/port/ch32/usb_ch58x_dc_usbfs.c <==
#include "usbd_core.h"
#include "usb_ch58x_usbfs_reg.h"
#define USB0_BASE 0x40008000u
#define USB1_BASE 0x40008400u
#define USBD USB0_BASE
#define CH58x_USBFS_DEV ((USB_FS_TypeDef *)USBD)
#define USBD_IRQHandler USB_IRQHandler //use actual usb irq name instead
#define EPn_CTRL(epid) \
    *(volatile uint8_t *)(&(CH58x_USBFS_DEV->UEP0_CTRL) + epid * 4 + (epid / 5) * 48)
#define EPn_TX_LEN(epid) \
    *(volatile uint8_t *)(&(CH58x_USBFS_DEV->UEP0_T_LEN) + epid * 4 + (epid / 5) * 48)
#define GET_SETUP_PACKET(data_add) \
    *(struct usb_setup_packet *)data_add
#define EPn_SET_TX_VALID(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_T_RES) | UEP_T_RES_ACK;
#define EPn_SET_RX_VALID(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_R_RES) | UEP_R_RES_ACK;
#define EPn_SET_TX_ISO_VALID(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_T_RES) | UEP_T_RES_TOUT;
#define EPn_SET_RX_ISO_VALID(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_R_RES) | UEP_R_RES_TOUT;
#define EPn_SET_TX_NAK(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_T_RES) | UEP_T_RES_NAK;
#define EPn_SET_RX_NAK(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_R_RES) | UEP_R_RES_NAK;
#define EPn_SET_TX_STALL(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_T_RES) | UEP_T_RES_STALL
#define EPn_SET_RX_STALL(epid) \
    EPn_CTRL(epid) = (EPn_CTRL(epid) & ~MASK_UEP_R_RES) | UEP_R_RES_STALL

int usb_dc_init(uint8_t busid)
{
    usb_dc_cfg.ep_in[0].ep_ram_addr = ep0_data_buff;
    usb_dc_cfg.ep_out[0].ep_ram_addr = ep0_data_buff;

    usb_dc_cfg.ep_in[1].ep_ram_addr = ep1_data_buff + 64;
    usb_dc_cfg.ep_out[1].ep_ram_addr = ep1_data_buff;

    usb_dc_cfg.ep_in[2].ep_ram_addr = ep2_data_buff + 64;
    usb_dc_cfg.ep_out[2].ep_ram_addr = ep2_data_buff;

    usb_dc_cfg.ep_in[3].ep_ram_addr = ep3_data_buff + 64;
    usb_dc_cfg.ep_out[3].ep_ram_addr = ep3_data_buff;

    usb_dc_cfg.ep_in[4].ep_ram_addr = ep0_data_buff + 64 + EP4_OUT_MPS;
    usb_dc_cfg.ep_out[4].ep_ram_addr = ep0_data_buff + 64;
#if (CONFIG_USBDEV_EP_NUM == 8)
    usb_dc_cfg.ep_in[5].ep_ram_addr = ep5_data_buff + 64;
    usb_dc_cfg.ep_out[5].ep_ram_addr = ep5_data_buff;

    usb_dc_cfg.ep_in[6].ep_ram_addr = ep6_data_buff + 64;
    usb_dc_cfg.ep_out[6].ep_ram_addr = ep6_data_buff;

    usb_dc_cfg.ep_in[7].ep_ram_addr = ep7_data_buff + 64;
    usb_dc_cfg.ep_out[7].ep_ram_addr = ep7_data_buff;
#endif
    /*!< Set the mode first and cancel RB_UC_CLR_ALL */
    CH58x_USBFS_DEV->USB_CTRL = 0x00;
    CH58x_USBFS_DEV->UEP4_1_MOD = RB_UEP4_RX_EN | RB_UEP4_TX_EN | RB_UEP1_RX_EN | RB_UEP1_TX_EN; /*!< EP4 OUT+IN   EP1 OUT+IN */
    CH58x_USBFS_DEV->UEP2_3_MOD = RB_UEP2_RX_EN | RB_UEP2_TX_EN | RB_UEP3_RX_EN | RB_UEP3_TX_EN; /*!< EP2 OUT+IN   EP3 OUT+IN */
#if (CONFIG_USBDEV_EP_NUM == 8)
    CH58x_USBFS_DEV->UEP567_MOD = RB_UEP5_RX_EN | RB_UEP5_TX_EN | RB_UEP6_RX_EN | RB_UEP6_TX_EN | RB_UEP7_RX_EN | RB_UEP7_TX_EN; /*!< EP5 EP6 EP7   OUT+IN */
#endif
    CH58x_USBFS_DEV->UEP0_DMA = (uint16_t)(uint32_t)ep0_data_buff;
    CH58x_USBFS_DEV->UEP1_DMA = (uint16_t)(uint32_t)ep1_data_buff;
    CH58x_USBFS_DEV->UEP2_DMA = (uint16_t)(uint32_t)ep2_data_buff;
    CH58x_USBFS_DEV->UEP3_DMA = (uint16_t)(uint32_t)ep3_data_buff;
#if (CONFIG_USBDEV_EP_NUM == 8)
    CH58x_USBFS_DEV->UEP5_DMA = (uint16_t)(uint32_t)ep5_data_buff;
    CH58x_USBFS_DEV->UEP6_DMA = (uint16_t)(uint32_t)ep6_data_buff;
    CH58x_USBFS_DEV->UEP7_DMA = (uint16_t)(uint32_t)ep7_data_buff;
#endif
    CH58x_USBFS_DEV->UEP0_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK;
    CH58x_USBFS_DEV->UEP1_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    CH58x_USBFS_DEV->UEP2_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    CH58x_USBFS_DEV->UEP3_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    CH58x_USBFS_DEV->UEP4_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK;
#if (CONFIG_USBDEV_EP_NUM == 8)
    CH58x_USBFS_DEV->UEP5_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    CH58x_USBFS_DEV->UEP6_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    CH58x_USBFS_DEV->UEP7_CTRL = UEP_R_RES_NAK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
#endif
    CH58x_USBFS_DEV->USB_DEV_AD = 0x00;

    /*!< Start the USB device and DMA, and automatically return to NAK before the interrupt flag is cleared during the interrupt */
    CH58x_USBFS_DEV->USB_CTRL = RB_UC_DEV_PU_EN | RB_UC_INT_BUSY | RB_UC_DMA_EN;
    if ((uint32_t) & (CH58x_USBFS_DEV->USB_CTRL) == (uint32_t)USB0_BASE) {
        /*!< USB0 */
        R16_PIN_ANALOG_IE |= RB_PIN_USB_IE | RB_PIN_USB_DP_PU;
    } else if ((uint32_t) & (CH58x_USBFS_DEV->USB_CTRL) == (uint32_t)USB1_BASE) {
        /*!< USB1 */
        R16_PIN_ANALOG_IE |= RB_PIN_USB2_IE | RB_PIN_USB2_DP_PU;
    }

    CH58x_USBFS_DEV->USB_INT_FG = 0xff;                        /*!< Clear interrupt flag */
    CH58x_USBFS_DEV->UDEV_CTRL = RB_UD_PD_DIS | RB_UD_PORT_EN; /*!< Allow USB port */
    CH58x_USBFS_DEV->USB_INT_EN = RB_UIE_SUSPEND | RB_UIE_BUS_RST | RB_UIE_TRANSFER;

    usb_dc_low_level_init();
    return 0;
}

int usbd_set_address(uint8_t busid, const uint8_t address)
{
    if (address == 0) {
        CH58x_USBFS_DEV->USB_DEV_AD = (CH58x_USBFS_DEV->USB_DEV_AD & 0x80) | address;
    }
    usb_dc_cfg.address = address;
    return 0;
}

int usbd_ep_open(uint8_t busid, const struct usb_endpoint_descriptor *ep)
{
    /*!< ep id */
    uint8_t epid = USB_EP_GET_IDX(ep->bEndpointAddress);
    if (epid > (CONFIG_USBDEV_EP_NUM - 1)) {
        /**
         * If you use ch58x, you can change the CONFIG_USBDEV_EP_NUM set to 8
         */
        USB_LOG_ERR("Ep addr %02x overflow\r\n", ep->bEndpointAddress);
        return -1;
    }

    /*!< ep max packet length */
    uint8_t mps = USB_GET_MAXPACKETSIZE(ep->wMaxPacketSize);
    /*!< update ep max packet length */
    if (USB_EP_DIR_IS_IN(ep->bEndpointAddress)) {
        /*!< in */
        usb_dc_cfg.ep_in[epid].ep_enable = true;
        usb_dc_cfg.ep_in[epid].mps = mps;
        usb_dc_cfg.ep_in[epid].eptype = USB_GET_ENDPOINT_TYPE(ep->bmAttributes);
    } else if (USB_EP_DIR_IS_OUT(ep->bEndpointAddress)) {
        /*!< out */
        usb_dc_cfg.ep_out[epid].ep_enable = true;
        usb_dc_cfg.ep_out[epid].mps = mps;
        usb_dc_cfg.ep_out[epid].eptype = USB_GET_ENDPOINT_TYPE(ep->bmAttributes);
    }
    return 0;
}

int usbd_ep_close(uint8_t busid, const uint8_t ep)
{
    /*!< ep id */
    uint8_t epid = USB_EP_GET_IDX(ep);
    if (USB_EP_DIR_IS_IN(ep)) {
        /*!< in */
        usb_dc_cfg.ep_in[epid].ep_enable = false;
    } else if (USB_EP_DIR_IS_OUT(ep)) {
        /*!< out */
        usb_dc_cfg.ep_out[epid].ep_enable = false;
    }
    return 0;
}

int usbd_ep_set_stall(uint8_t busid, const uint8_t ep)
{
    /*!< ep id */
    uint8_t epid = USB_EP_GET_IDX(ep);
    if (USB_EP_DIR_IS_OUT(ep)) {
        EPn_SET_RX_STALL(epid);
    } else {
        EPn_SET_TX_STALL(epid);
    }
    return 0;
}

int usbd_ep_clear_stall(uint8_t busid, const uint8_t ep)
{
    uint8_t epid = USB_EP_GET_IDX(ep);
    if (USB_EP_DIR_IS_OUT(ep)) {
        EPn_CLR_RX_STALL(epid);
    } else {
        EPn_CLR_TX_STALL(epid);
    }
    return 0;
}

int usbd_ep_start_write(uint8_t busid, const uint8_t ep, const uint8_t *data, uint32_t data_len)
{
    uint8_t ep_idx = USB_EP_GET_IDX(ep);

    if (!data && data_len) {
        return -1;
    }
    if (!usb_dc_cfg.ep_in[ep_idx].ep_enable) {
        return -2;
    }
    if ((uint32_t)data & 0x03) {
        return -3;
    }

    usb_dc_cfg.ep_in[ep_idx].xfer_buf = (uint8_t *)data;
    usb_dc_cfg.ep_in[ep_idx].xfer_len = data_len;
    usb_dc_cfg.ep_in[ep_idx].actual_xfer_len = 0;

    if (data_len == 0) {
        /*!< write 0 len data */
        EPn_SET_TX_LEN(ep_idx, 0);
        /*!< enable tx */
        if (usb_dc_cfg.ep_in[ep_idx].eptype != USB_ENDPOINT_TYPE_ISOCHRONOUS) {
            EPn_SET_TX_VALID(ep_idx);
        } else {
            EPn_SET_TX_ISO_VALID(ep_idx);
        }
        /*!< return */
        return 0;
    } else {
        /*!< Not zlp */
        data_len = MIN(data_len, usb_dc_cfg.ep_in[ep_idx].mps);
        /*!< write buff */
        memcpy(usb_dc_cfg.ep_in[ep_idx].ep_ram_addr, data, data_len);
        /*!< write real_wt_nums len data */
        EPn_SET_TX_LEN(ep_idx, data_len);
        /*!< enable tx */
        if (usb_dc_cfg.ep_in[ep_idx].eptype != USB_ENDPOINT_TYPE_ISOCHRONOUS) {
            EPn_SET_TX_VALID(ep_idx);
        } else {
            EPn_SET_TX_ISO_VALID(ep_idx);
        }
    }
    return 0;
}

int usbd_ep_start_read(uint8_t busid, const uint8_t ep, uint8_t *data, uint32_t data_len)
{
    uint8_t ep_idx = USB_EP_GET_IDX(ep);

    if (!data && data_len) {
        return -1;
    }
    if (!usb_dc_cfg.ep_out[ep_idx].ep_enable) {
        return -2;
    }
    if ((uint32_t)data & 0x03) {
        return -3;
    }

    usb_dc_cfg.ep_out[ep_idx].xfer_buf = (uint8_t *)data;
    usb_dc_cfg.ep_out[ep_idx].xfer_len = data_len;
    usb_dc_cfg.ep_out[ep_idx].actual_xfer_len = 0;

    if (data_len == 0) {
    } else {
        data_len = MIN(data_len, usb_dc_cfg.ep_out[ep_idx].mps);
    }

    if (usb_dc_cfg.ep_out[ep_idx].eptype != USB_ENDPOINT_TYPE_ISOCHRONOUS) {
        EPn_SET_RX_VALID(ep_idx);
    } else {
        EPn_SET_RX_ISO_VALID(ep_idx);
    }
    return 0;
}
